--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Join sekarang untuk full video." />
     <meta
       property="og:image"
-      content="https://lucah-melayu-viral-18.pages.dev/20.jpg"
+      content="https://lucah-melayu-viral.pages.dev/20.jpg"
     />
     <meta property="og:type" content="website" />
     <style>
@@ -472,3 +472,4 @@
     </div>
   </body>
 </html>
+
